# gen-image-via-api

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
examples/: config.example.toml
gen_image_via_api/: __init__.py  cli.py  config.py  delivery.py  generation.py  prompting.py  provider_support.py  providers.py  queue.py  service.py  utils.py  webui.py  worker.py
gen_image_via_api/provider_backends/: __init__.py  idlecloud.py  legacy.py  media.py  nai.py  params.py  registry.py
references/: api-config-examples.md  cli.md  config.md  delivery.md  response-parsing.md
scripts/: gen_image_cli.py
tests/: test_cli_mock.py  test_prompting_and_config.py  test_providers_nai_idlecloud.py  test_providers_responses.py  test_worker_parallel.py
